5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1675_2471.log
== TEST (2019-05-30 12:58:31) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0):
	msg = "Baixo"
elif(a<45) and(b>=22,0): 
	msg = "Medio"
elif(a>=45) and(b<22,0):
	msg = ("Medio")
elif(a>=45) and(b>=22,0):
	msg = "Alto"
print(msg)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:58:47) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0):
	msg = "Baixo"
elif(a<45) and(b>=22,0): 
	msg = "Medio"
elif(a>=45) and(b<22,0):
	msg = ("Medio")
elif(a>=45) and(b>=22,0):
	msg = "Alto"
print(msg)
	
-- EXECUTION TIME:
0.200592
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Baixo
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Medio
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:59:30) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0):
	msg = "Baixo"
elif(a<45) and(b>=22,0): 
	msg = "Medio"
elif(a>=45) and(b<22,0):
	msg = ("Medio")
elif(a>=45) and(b>=22,0):
	msg = "Alto"
else:
	msg = "Dado invalidos"

print(msg)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:01:00) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0):
	msg = "Baixo"
elif(a<45) and(b>=22,0): 
	msg = "Medio"
elif(a>=45) and(b<22,0):
	msg = ("Medio")
elif(a>=45) and(b>=22,0):
	msg = "Alto"
elif a<= 0 or a>130 or b<=0:
	msg = "Dado invalidos"

print(msg)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:02:28) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (0<b<22,0):
	msg = "Baixo"
elif(a<45) and(0<b>=22,0): 
	msg = "Medio"
elif(a>=45) and(b<22,0):
	msg = ("Medio")
elif(a>=45) and(0<b>=22,0):
	msg = "Alto"
elif a<= 0 or a>130 or b<=0:
	msg = "Dado invalidos"

print(msg)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:02:57) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (0<b<22,0):
	msg = "Baixo"
elif(a<45) and(0<b>=22,0): 
	msg = "Medio"
elif(a>=45) and(0<b<22,0):
	msg = ("Medio")
elif(a>=45) and(0<b>=22,0):
	msg = "Alto"
elif a<= 0 or a>130 or b<=0:
	msg = "Dado invalidos"

print(msg)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:03:07) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (0<b<22,0):
	msg = "Baixo"
elif(a<45) and(0<b>=22,0): 
	msg = "Medio"
elif(a>=45) and(0<b<22,0):
	msg = ("Medio")
elif(a>=45) and(0<b>=22,0):
	msg = "Alto"
elif a<= 0 or a>130 or b<=0:
	msg = "Dado invalidos"

print(msg)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:05:02) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0):
	msg = "Baixo"
elif(a<45) and(b>=22,0)and(a>0): 
	msg = "Medio"
elif(a>=45) and(b<22,0)and(a>0):
	msg = ("Medio")
elif(a>=45) and(b>=22,0)and(a>0):
	msg = "Alto"
elif a<= 0 or a>130 or b<=0 :
	msg = "Dado invalidos"

print(msg)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:06:09) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a>130:
	msg = "Baixo"
elif(a<45) and(b>=22,0)and(a>0)and a>130: 
	msg = "Medio"
elif(a>=45) and(b<22,0)and(a>0) and a>130:
	msg = ("Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a>130:
	msg = "Alto"
elif a<= 0 or a>130 or b<=0 :
	msg = "Dado invalidos"

print(msg)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:06:36) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a>130:
	msg = "Baixo"
elif(a<45) and(b>=22,0)and(a>0)and a>130: 
	msg = "Medio"
elif(a>=45) and(b<22,0)and(a>0) and a>130:
	msg = ("Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a>130:
	msg = "Alto"
elif a<= 0 or a>130 or b<=0 :
	msg = "Dado invalidos"

	print(msg)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:07:21) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a>130:
	r= "Baixo"
elif(a<45) and(b>=22,0)and(a>0)and a>130: 
	r = "Medio"
elif(a>=45) and(b<22,0)and(a>0) and a>130:
	r = ("Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a>130:
	r = "Alto"
elif a<= 0 or a>130 or b<=0 :
	r = "Dado invalidos"

	print(r)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:07:26) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a>130:
	r= "Baixo"
elif(a<45) and(b>=22,0)and(a>0)and a>130: 
	r = "Medio"
elif(a>=45) and(b<22,0)and(a>0) and a>130:
	r = ("Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a>130:
	r = "Alto"
elif a<= 0 or a>130 or b<=0 :
	r = "Dado invalidos"

print(r)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:07:54) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a>130:
	r= "Baixo"
elif(a<45) and(b>=22,0)and(a>0)and a>130: 
	r = "Medio"
elif(a>=45) and(b<22,0)and(a>0) and a>130:
	r = "Medio"
elif(a>=45) and(b>=22,0)and(a>0)and a>130:
	r = "Alto"
elif a<= 0 or a>130 or b<=0 :
	r = "Dado invalidos"

print(r)
	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:10:39) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130:
	print("Baixo")
elif(a<45) and(b>=22,0)and(a>0)and a<130: 
	print("Medio")
elif(a>=45) and(b<22,0)and(a>0) and a<130:
	print("Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")

print(r)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(r)
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:10:54) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130:
	print("Baixo")
elif(a<45) and(b>=22,0)and(a>0)and a<130: 
	print("Medio")
elif(a>=45) and(b<22,0)and(a>0) and a<130:
	print("Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 13:11:08) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130:
	print("Baixo")
elif(a<45) and(b>=22,0)and(a>0)and a<130: 
	print("Medio")
elif(a>=45) and(b<22,0)and(a>0) and a<130:
	print("Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- EXECUTION TIME:
0.113303
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dado invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Baixo
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Medio
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:11:18) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130:
	print("Baixo")
elif(a<45) and(b>=22,0)and(a>0)and a<130: 
	print("Medio")
elif(a>=45) and(b<22,0)and(a>0) and a<130:
	print("Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:12:05) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130:
	print("Risco: Baixo")
elif(a<45) and(b>=22,0)and(a>0)and a<130: 
	print("Risco: Medio")
elif(a>=45) and(b<22,0)and(a>0) and a<130:
	print("Risco: Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Risco: Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 13:12:15) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130:
	print("Risco: Baixo")
elif(a<45) and(b>=22,0)and(a>0)and a<130: 
	print("Risco: Medio")
elif(a>=45) and(b<22,0)and(a>0) and a<130:
	print("Risco: Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Risco: Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- EXECUTION TIME:
0.165174
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dado invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco: Baixo
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Medio
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:13:53) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130:
	print("Risco: Baixo")
elif(a<45) and(b>=22,0)and(a>0)and a<130: 
	print("Risco: Medio")
elif(a>=45) and(b<22,0)and(a>0) and a<130:
	print("Risco: Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Risco: Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:14:14) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130:
	print("Risco: Baixo")
elif(a<45) and(b>=22,0)and(a>0)and a<130: 
	print("Risco: Medio")
elif(a>=45) and(b<22,0)and(a>0) and a<130:
	print("Risco: Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Risco: Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:14:29) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130:
	print("Risco: Baixo")
elif(a<45) and(b>=22,0)and(a>0)and a<130: 
	print("Risco: Medio")
elif(a>=45) and(b<22,0)and(a>0) and a<130:
	print("Risco: Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Risco: Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:18:40) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130:
	print("Risco: Baixo")
elif(a<=45) and(b<22,0)and(a>0)and a<130: 
	print("Risco: Medio")
elif(a>=45) and(b<22,0)and(a>0) and a<130:
	print("Risco: Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Risco: Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:18:57) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130:
	print("Risco: Baixo")
elif(a<=45) and(b<22,0)and(a>0)and a<130: 
	print("Risco: Medio")
elif(a>=45) and(b<22,0)and(a>0) and a<130:
	print("Risco: Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Risco: Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:19:19) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130:
	print("Risco: Baixo")
elif(a<=45) and(b<22,0)and(a>0)and a<130: 
	print("Risco: Medio")
elif(a>=45) and(b<22,0)and(a>0) and a<130:
	print("Risco: Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Risco: Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:23:02) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130: # 1
	print("Risco: Baixo")
elif(a>=45) and(b<22,0)and(a>0)and a<130: 
	print("Risco: Medio")
elif(a<45) and(b>=22,0)and(a>0) and a<130:
	print("Risco: Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Risco: Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:23:23) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130: # 1
	print("Risco: Baixo")
elif(a>=45) and(b<22,0)and(a>0)and a<130: 
	print("Risco: Medio")
elif(a<45) and(b>=22,0)and(a>0) and a<130:
	print("Risco: Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Risco: Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:23:39) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130: # 1
	print("Risco: Baixo")
elif(a>=45) and(b<22,0)and(a>0)and a<130: 
	print("Risco: Medio")
elif(a<45) and(b>=22,0)and(a>0) and a<130:
	print("Risco: Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Risco: Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:23:52) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130: # 1
	print("Risco: Baixo")
elif(a>=45) and(b<22,0)and(a>0)and a<130: 
	print("Risco: Medio")
elif(a<45) and(b>=22,0)and(a>0) and a<130:
	print("Risco: Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Risco: Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:25:25) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130: # 1
	print("Risco: Baixo")
elif(a>=45) and(b<22,0)and(a>0)and a<130: 
	print("Risco: Medio")
elif(a<45) and(b>=22,0)and(a>0) and a<130:
	print("Risco: Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Risco: Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:26:08) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130: # 1
	print("Risco: Baixo")
elif(a>=45) and(b<22,0)and(a>0)and a<130: 
	print("Risco: Medio")
elif(a<45) and(b>=22,0)and(a>0) and a<130:
	print("Risco: Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Risco: Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:32:58) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130: # 1
	print("Risco: Baixo")
elif(a>=45) and(b<22,0)and(a>0)and a<130: 
	print("Risco: Medio")
elif(a<45) and(b>=22,0)and(a>0) and a<130:
	print("Risco: Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Risco: Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:35:20) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22,0) and(a>0) and a<130: # 1
	print("Risco: Baixo")
elif(a>=45) and(b<22,0)and(a>0)and a<130: 
	print("Risco: Medio")
elif(a<45) and(b>=22,0)and(a>0) and a<130:
	print("Risco: Medio")
elif(a>=45) and(b>=22,0)and(a>0)and a<130:
	print("Risco: Alto")
elif a>= 0 or a>130 or b<=0 :
	print("Dado invalidos")


	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dado invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 09:15:07) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22) and(a>0) and a<130: # 1
	print("Risco: Baixo")
elif(a<=0 or a>130 or b<=0):
	print("Dados invalidos")

	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 09:15:22) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22) and(a>0) and a<130: # 1
	print("Risco: Baixo")
elif(a<=0 or a>130 or b<=0):
	print("Dados invalidos")

	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 09:15:49) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22) and(a>0) and a<130: # 1
	print("Risco: Baixo")
elif(a<=0 or a>130 or b<=0):
	print("Dados invalidos")

	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 09:21:45) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22) and(a>0) and a>0# 1
	print("Risco: Baixo")
elif(a>=45 and b<22 and a<130) or (a<45 and b>=22 and a>0):
	print("Medio")
elif(a>=45 and b>=22):
	print("Alto")
elif(a<=0 or a>130 or b<=0):
	print("Dados invalidos")

	
-- ERROR:
File "XXXX", line 6
    if (a<45) and (b<22) and(a>0) and a>0# 1
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 09:21:56) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22) and(a>0) and a>0:# 1
	print("Risco: Baixo")
elif(a>=45 and b<22 and a<130) or (a<45 and b>=22 and a>0):
	print("Medio")
elif(a>=45 and b>=22):
	print("Alto")
elif(a<=0 or a>130 or b<=0):
	print("Dados invalidos")

	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 09:22:09) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22) and(a>0) and a>0:# 1
	print("Risco: Baixo")
elif(a>=45 and b<22 and a<130) or (a<45 and b>=22 and a>0):
	print("Medio")
elif(a>=45 and b>=22):
	print("Alto")
elif(a<=0 or a>130 or b<=0):
	print("Dados invalidos")

	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 09:22:22) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22) and(a>0) and a>0:# 1
	print("Risco: Baixo")
elif(a>=45 and b<22 and a<130) or (a<45 and b>=22 and a>0):
	print("Medio")
elif(a>=45 and b>=22):
	print("Alto")
elif(a<=0 or a>130 or b<=0):
	print("Dados invalidos")

	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 09:22:38) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22) and(a>0) and a>0:# 1
	print("Risco: Baixo")
elif(a>=45 and b<22 and a<130) or (a<45 and b>=22 and a>0):
	print("Medio")
elif(a>=45 and b>=22):
	print("Alto")
elif(a<=0 or a>130 or b<=0):
	print("Dados invalidos")

	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-31 09:22:59) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22) and(a>0) and a>0:# 1
	print("Risco: Baixo")
elif(a>=45 and b<22 and a<130) or (a<45 and b>=22 and a>0):
	print("Medio")
elif(a>=45 and b>=22):
	print("Alto")
elif(a<=0 or a>130 or b<=0):
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.642215
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 09:23:14) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22) and(a>0) and a>0:# 1
	print("Risco: Baixo")
elif(a>=45 and b<22 and a<130) or (a<45 and b>=22 and a>0):
	print("Medio")
elif(a>=45 and b>=22):
	print("Alto")
elif(a<=0 or a>130 or b<=0):
	print("Dados invalidos")

	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 09:23:47) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22) and(a>0) and a>0:# 1
	print("Risco: Baixo")
elif(a>=45 and b<22 and a<130) or (a<45 and b>=22 and a>0):
	print("Medio")
elif(a>=45 and b>=22 a<130):
	print("Alto")
elif(a<=0 or a>130 or b<=0):
	print("Dados invalidos")

	
-- ERROR:
File "XXXX", line 10
    elif(a>=45 and b>=22 a<130):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 09:23:56) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if (a<45) and (b<22) and(a>0) and a>0:# 1
	print("Risco: Baixo")
elif(a>=45 and b<22 and a<130) or (a<45 and b>=22 and a>0):
	print("Medio")
elif(a>=45 and b>=22 and a<130):
	print("Alto")
elif(a<=0 or a>130 or b<=0):
	print("Dados invalidos")

	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 09:25:47) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if ((a<45) and (b<22) and(a>0) and a>0and b>0):
	print("Risco: Baixo")
elif(a>=45 and b<22 and a<130) or (a<45 and b>=22 and a>0 and b>0):
	print("Medio")
elif(a>=45 and b>=22 and a<130 and b>0):
	print("Alto")
else:
	print("Dados invalidos")

	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 09:25:55) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if ((a<45) and (b<22) and(a>0) and a>0and b>0):
	print("Risco: Baixo")
elif(a>=45 and b<22 and a<130) or (a<45 and b>=22 and a>0 and b>0):
	print("Medio")
elif(a>=45 and b>=22 and a<130 and b>0):
	print("Alto")
else:
	print("Dados invalidos")

	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-31 09:26:05) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if ((a<45) and (b<22) and(a>0) and a>0and b>0):
	print("Risco: Baixo")
elif(a>=45 and b<22 and a<130) or (a<45 and b>=22 and a>0 and b>0):
	print("Medio")
elif(a>=45 and b>=22 and a<130 and b>0):
	print("Alto")
else:
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.716459
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 09:26:12) 
-- CODE:
a = int(input("insira a idade: "))
b = float(input("insira o IMC: "))

print("Entradas:",a, "anos e IMC",b)

if ((a<45) and (b<22) and(a>0) and a>0and b>0):
	print("Risco: Baixo")
elif(a>=45 and b<22 and a<130) or (a<45 and b>=22 and a>0 and b>0):
	print("Medio")
elif(a>=45 and b>=22 and a<130 and b>0):
	print("Alto")
else:
	print("Dados invalidos")

	
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
